fix: resolve packages

--- a/skeleton.html
+++ b/skeleton.html
@@ -5,11 +5,7 @@
   <meta charset="UTF-8" />
   <title>Diagram Viewer</title>
 
-  <link rel="stylesheet" href="./node_modules/dmn-js/dist/assets/dmn-js-drd.css">
-  <link rel="stylesheet" href="./node_modules/dmn-js/dist/assets/dmn-js-decision-table.css">
-  <link rel="stylesheet" href="./node_modules/dmn-js/dist/assets/dmn-js-literal-expression.css">
-  <link rel="stylesheet" href="./node_modules/dmn-js/dist/assets/dmn-js-shared.css">
-  <link rel="stylesheet" href="./node_modules/dmn-js/dist/assets/dmn-font/css/dmn.css">
+  <!-- dependencies are injected via loadScript to resolve the correct package -->
 
   <style>
     body {
@@ -51,8 +47,6 @@
     <h4 id="title"></h4>
   </div>
 
-  <script src="./node_modules/dmn-js/dist/dmn-viewer.production.min.js"></script>
-  <script src="./node_modules/bpmn-js/dist/bpmn-viewer.production.min.js"></script>
   <script src="./skeleton.js"></script>
 </body>
 
